--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,6 +13,8 @@
         <a href="/images" class="text-gray-300 hover:text-white transition-colors">AI Images</a>
         <a href="/demo" class="text-gray-300 hover:text-white transition-colors">Demo</a>
         <a href="/analytics" class="text-gray-300 hover:text-white transition-colors">Analytics</a>
+        <a href="/blog" class="text-gray-300 hover:text-white transition-colors">Blog</a>
+        <a href="/community" class="text-gray-300 hover:text-white transition-colors">Community</a>
         <a href="/about" class="text-gray-300 hover:text-white transition-colors">About</a>
 
         <% if (user) { %>
@@ -30,6 +32,12 @@
               <% } %>
               <a href="/profile" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
                 <i class="fas fa-user mr-2"></i> My Profile
+              </a>
+              <a href="/blog/create/new" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+                <i class="fas fa-newspaper mr-2"></i> Create Blog
+              </a>
+              <a href="/community/create/new" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+                <i class="fas fa-users mr-2"></i> Create Community Post
               </a>
               <a href="/rate-limits/request" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
                 <i class="fas fa-tachometer-alt mr-2"></i> Request Rate Limit
@@ -59,6 +67,8 @@
         <a href="/images" class="text-gray-300 hover:text-white transition-colors py-2">AI Images</a>
         <a href="/demo" class="text-gray-300 hover:text-white transition-colors py-2">Demo</a>
         <a href="/analytics" class="text-gray-300 hover:text-white transition-colors py-2">Analytics</a>
+        <a href="/blog" class="text-gray-300 hover:text-white transition-colors py-2">Blog</a>
+        <a href="/community" class="text-gray-300 hover:text-white transition-colors py-2">Community</a>
         <a href="/about" class="text-gray-300 hover:text-white transition-colors py-2">About</a>
 
         <% if (user) { %>
@@ -74,6 +84,12 @@
             <% } %>
             <a href="/profile" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-user mr-2"></i> My Profile
+            </a>
+            <a href="/blog/create/new" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-newspaper mr-2"></i> Create Blog
+            </a>
+            <a href="/community/create/new" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-users mr-2"></i> Create Community Post
             </a>
             <a href="/rate-limits/request" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-tachometer-alt mr-2"></i> Request Rate Limit
