--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -32,9 +32,14 @@
 
       <div class="flex justify-between items-center">
         <h2 class="text-xl font-semibold mb-4">Account Settings</h2>
-        <a href="/chat" class="text-neon-blue hover:underline flex items-center">
-          <i class="fas fa-arrow-left mr-1"></i> Back to Chat
-        </a>
+        <div class="flex space-x-4">
+          <a href="/profile/content" class="text-neon-purple hover:underline flex items-center">
+            <i class="fas fa-newspaper mr-1"></i> My Content
+          </a>
+          <a href="/chat" class="text-neon-blue hover:underline flex items-center">
+            <i class="fas fa-arrow-left mr-1"></i> Back to Chat
+          </a>
+        </div>
       </div>
 
       <div class="border-t border-gray-800 pt-4">
