--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -33,6 +33,7 @@
               <a href="/profile" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
                 <i class="fas fa-user mr-2"></i> My Profile
               </a>
+              <!-- Messages link removed as requested -->
               <a href="/blog/create/new" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
                 <i class="fas fa-newspaper mr-2"></i> Create Blog
               </a>
@@ -85,6 +86,7 @@
             <a href="/profile" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-user mr-2"></i> My Profile
             </a>
+            <!-- Messages link removed as requested -->
             <a href="/blog/create/new" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-newspaper mr-2"></i> Create Blog
             </a>
